--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   },
   "devDependencies": {
     "@types/jest": "23.3.1",
-    "@types/webpack": "4.4.11",
     "jest": "23.5.0",
     "lint-staged": "7.2.2",
     "pre-commit": "1.2.2",
@@ -45,5 +44,10 @@
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
     "typescript": "3.0.1"
+  },
+  "dependencies": {
+    "@types/webpack": "4.4.11",
+    "@types/webpack-sources": "0.1.5",
+    "webpack-sources": "1.1.0"
   }
 }
