Add `lint` command

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "lint": "tslint --project .",
     "lint-staged": "lint-staged",
     "test": "jest"
   },
