--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/jest": "23.3.1",
     "jest": "23.5.0",
+    "jest-junit": "5.1.0",
     "lint-staged": "7.2.2",
     "pre-commit": "1.2.2",
     "prettier": "1.14.2",
